cmake_minimum_required(VERSION 3.26)
project(IT3040_Week2)

set(CMAKE_CXX_STANDARD 17)

add_executable(IT3040_Week2
        Week2/Bai2.3.cpp)
add_executable(new_target Week2/Bai2.2.cpp)
add_executable(new_target1 Week2/Bai2.3.cpp)
add_executable(new_target2 Week2/Bai2.4.cpp)
add_executable(new_target3 Week2/Bai2.5.cpp)
add_executable(new_target4 Week2/Bai2.6.cpp)
add_executable(new_target5 Week2/Bai2.7.cpp)
add_executable(new_target6 Week2/Bai2.8.cpp)
add_executable(new_target7 Week2/Bai2.9.cpp)
